--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         0%, 100% { box-shadow: 0 0 0 0 rgba(34, 211, 238, 0); }
         50% { box-shadow: 0 0 15px 5px rgba(34, 211, 238, 0.4); }
       }
+      @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fade-in 1s ease-out;
+      }
     </style>
   <script type="importmap">
 {
